// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The HeroListFeatureConnected component should not render without actions or hero 1`] = `null`;

exports[`The HeroListFeatureConnected component should render 1`] = `
Array [
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "rgba(39, 39, 46, 0.3)",
          "fontFamily": "InterUI-Medium",
          "fontSize": 14,
          "lineHeight": 21,
        }
      }
    >
      Some cool list
    </Text>
    <Text
      style={
        Object {
          "color": "#27272E",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Check it out
    </Text>
  </View>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(249, 249, 251)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            blurRadius={80}
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "__typename": "ImageMediaSource",
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/200/200",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            material="regular"
            style={
              Object {
                "backgroundColor": "rgba(242, 242, 247, 0.8)",
                "bottom": 0,
                "flex": 1,
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "__typename": "ImageMediaSource",
                "cache": "force-cache",
                "uri": "https://picsum.photos/200/200",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": null,
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(39, 39, 46, 0.6)",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              What
            </Text>
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Black",
                "fontSize": 24,
                "lineHeight": 27.6,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#27272E",
                }
              }
            >
              Boom
            </Text>
          </Text>
          <Text
            bold={false}
            italic={false}
            numberOfLines={3}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(39, 39, 46, 0.6)",
                }
              }
            >
              Read
            </Text>
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 8,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    cardPadding={false}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "__typename": "ImageMediaSource",
              "cache": "force-cache",
              "uri": "https://picsum.photos/200/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.3)",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={true}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#A5A5A5",
            "borderRadius": 16,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginTop": 8,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Check this out
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`The HeroListFeatureConnected component should render a loading state when isLoading 1`] = `
Array [
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 14,
          "marginVertical": 3.5,
          "width": "60%",
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 24,
          "marginVertical": 1.8000000000000007,
          "width": "100%",
        }
      }
    />
  </View>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      isLoading={true}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(249, 249, 251)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            blurRadius={80}
            fadeDuration={250}
            onLoad={[Function]}
            source={Array []}
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            material="regular"
            style={
              Object {
                "backgroundColor": "rgba(242, 242, 247, 0.8)",
                "bottom": 0,
                "flex": 1,
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <Image
          fadeDuration={250}
          isLoading={true}
          onLoad={[Function]}
          source={Array []}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": null,
                "flexDirection": "row",
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 24,
                "marginVertical": 1.8000000000000007,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 16,
                "marginVertical": 5,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 8,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    cardPadding={false}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`The HeroListFeatureConnected component should render without a hero card 1`] = `
Array [
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "rgba(39, 39, 46, 0.3)",
          "fontFamily": "InterUI-Medium",
          "fontSize": 14,
          "lineHeight": 21,
        }
      }
    >
      Some cool list
    </Text>
    <Text
      style={
        Object {
          "color": "#27272E",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Check it out
    </Text>
  </View>,
  <View
    cardPadding={false}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "__typename": "ImageMediaSource",
              "cache": "force-cache",
              "uri": "https://picsum.photos/200/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.3)",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={true}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#A5A5A5",
            "borderRadius": 16,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginTop": 8,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Check this out
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`The HeroListFeatureConnected component should render without actions 1`] = `
Array [
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "rgba(39, 39, 46, 0.3)",
          "fontFamily": "InterUI-Medium",
          "fontSize": 14,
          "lineHeight": 21,
        }
      }
    >
      Some cool list
    </Text>
    <Text
      style={
        Object {
          "color": "#27272E",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Check it out
    </Text>
  </View>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(249, 249, 251)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            blurRadius={80}
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "__typename": "ImageMediaSource",
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/200/200",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            material="regular"
            style={
              Object {
                "backgroundColor": "rgba(242, 242, 247, 0.8)",
                "bottom": 0,
                "flex": 1,
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <Image
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "__typename": "ImageMediaSource",
                "cache": "force-cache",
                "uri": "https://picsum.photos/200/200",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": null,
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(39, 39, 46, 0.6)",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              What
            </Text>
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Black",
                "fontSize": 24,
                "lineHeight": 27.6,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#27272E",
                }
              }
            >
              Boom
            </Text>
          </Text>
          <Text
            bold={false}
            italic={false}
            numberOfLines={3}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(39, 39, 46, 0.6)",
                }
              }
            >
              Read
            </Text>
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 8,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    cardPadding={false}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={true}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#A5A5A5",
            "borderRadius": 16,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginTop": 8,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Check this out
        </Text>
      </View>
    </View>
  </View>,
]
`;
